--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -87,6 +87,18 @@
   }
 }
 
+.about__details-caption{
+  @media (min-width: $medium-width) {
+    margin-left: -9px;
+  }
+}
+
+.about__details-icon{
+  @media (min-width: $medium-width) {
+    margin-right: -10px;
+  }
+}
+
 .about__description{
   font-weight: 300;
   margin-top: 20px;
