--- a/source/sass/blocks/country-description-list.scss
+++ b/source/sass/blocks/country-description-list.scss
@@ -9,7 +9,7 @@
 
   @media (min-width: $large-width) {
     width: auto;
-    margin-top: 68px;
+    margin-top: 66px;
   }
 }
 
@@ -27,6 +27,9 @@
 
   @media (min-width: $large-width) {
     max-width: 90%;
+    &:not(:last-child){
+      margin-bottom: 30px;
+    }
   }
 }
 
@@ -146,12 +149,14 @@
   position: absolute;
   bottom: 6px;
   left: 2px;
+  right: 1px;
   padding-top: 20px;
   padding-bottom: 16px;
   padding-left: 21px;
   background-color: #FFEFEF;
 
   @media (min-width: $medium-width) {
+    right: 0;
     bottom: 6px;
     left: 6px;
   }
@@ -175,5 +180,6 @@
 
   @media (min-width: $large-width) {
     margin-right: 12px;
+    margin-top: 9px;
   }
 }
