--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -57,7 +57,7 @@
     border-radius: 60px;
 
     &:not(:first-child){
-      margin-bottom: 43px;
+      margin-bottom: 41px;
     }
   }
 }
@@ -144,7 +144,7 @@
 
 
   @media (min-width: $medium-width) {
-    margin-top: 36px;
+    margin-top: 38px;
     margin-left: 1px;
     font-size: 20px;
     line-height: 24px;
@@ -152,7 +152,6 @@
   }
 
   @media (min-width: $large-width) {
-    max-width: 581px;
     margin-top: 35px;
     margin-left: 0;
   }
@@ -557,5 +556,15 @@
 
   @media (min-width: $large-width) {
     margin-top: 1px;
+  }
+}
+
+.step-list__step-back-caption{
+  @media (min-width: $medium-width) {
+    margin-top: -6px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 12px;
   }
 }
