--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -36,7 +36,7 @@
   @include text(16px, 300, 22px);
   // max-width: 185px;
   // margin-left: 43px;
-  margin-top: 19px;
+  margin-top: 21px;
 
   @media (min-width: $medium-width) {
     justify-content: center;
@@ -104,7 +104,7 @@
   margin-top: 30px;
 
   @media (min-width: $medium-width) {
-    margin-top: 68px;
+    margin-top: 66px;
     margin-right: 72px;
   }
 
@@ -120,12 +120,12 @@
   @include text(16px, 300, 22px, #FFFFFF);
   letter-spacing: 0.01em;
   text-align: center;
-  margin-top: 27px;
+  margin-top: 29px;
 
   @media (min-width: $medium-width) {
     flex-direction: row;
     justify-content: center;
-    margin-top: 56px;
+    margin-top: 57px;
     font-size: 28px;
     line-height: 30px;
     margin-left: 9px;
@@ -139,7 +139,9 @@
 }
 
 .feedback__any-questions{
-  @media (min-height: $medium-width) {
+  margin-right: 5px;
+
+  @media (min-width: $medium-width) {
     margin-right: 9px;
   }
 }
