--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -82,6 +82,9 @@
     max-height: 285px;
     padding-bottom: 0;
     margin-bottom: 30px;
+    &:last-child{
+      margin-top: 3px;
+    }
   }
 
   &:hover{
